--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -1,6 +1,6 @@
 {
-  "token": "NzEwMTYxODI5MjgzODg5MTUy.Xrwbvg.q1x4O9cLpQebyU31m9zc4RhgBv8",
+  "token": "TOKEN",
   "prefix": "!",
   "defaultCommandCooldown" : 1,
-  "fortniteapiio" : "dc236ede-fb1d8694-45bcdb38-159c23fd"
+  "fortniteapiio" : "CLE FORTNITE API IO"
 }
